<resources>
    <string name="app_name">PowerCrew</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="app_descraption">Stay connected, stay protected</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="welcome">Welcome %s</string>
    <string name="Login">Login</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="login_to_continue_using_the_app">Login to continue using the app</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="enter_your_personal_information">Enter Your personal information</string>
    <string name="fullName">Full Name</string>
    <string name="enter_your_full_name">Enter Your Full Name</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>

    <!-- Registration -->
    <string name="error_empty_name_en">Please enter the name</string>
    <string name="error_invalid_phone_en">The phone number must contain 11 digits</string>
    <string name="error_short_password_en">Password must be at least 6 characters long.</string>
    <string name="error_email">Invalid email address.</string>
    <string name="success_signup_en">Sign-up successful</string>
    <string name="phone_dosnt_exist">This Phone Number Dons\'t Exist in our Company</string>
    <string name="please_enter_your_password">Please Enter Your Password</string>
    <string name="registration_succefully">Registration Successfully</string>
    <string name="not_found">not found</string>
    <string name="choose_your_area">Choose your area</string>
    <string name="please_enter_city_name">Please Enter City Name</string>
    <string name="problem_title">Problem Title</string>
    <string name="problem_description">Problem Description</string>
    <string name="problem_address">Problem Address</string>
    <string name="select_engineer">Select Engineer</string>
    <string name="submit_btn">Submit</string>
    <string name="engineers">Engineers</string>
    <string name="please_enter_engineer_name">Please Enter Engineer Name</string>
    <string name="problem_pending_state">Pending</string>
    <string name="sent_problem_succefully">Problem was sent successfully</string>
    <string name="language">Language</string>
    <string name="settings">Settings</string>
    <string name="about_us">About us</string>
    <string name="in_progress_problems">In Progress Problems</string>
    <string name="have_a_nice_day">Have a nice day</string>
    <string name="select_problem_type">Select Problem Type</string>
    <string name="report_a_problem">Report a problem</string>
    <string name="pending_problems">Pending Problems</string>
    <string name="completed_problems">Completed Problems</string>
    <string name="no_problem_found">No Problem Found !</string>
    <string name="problem_draisla">problem Details</string>
    <string name="problem_details">Problem Details</string>
    <string name="date">Date:</string>
    <string name="title">Title:</string>
    <string name="address">Address:</string>
    <string name="statue">Statue :</string>
    <string name="engineer_info">Engineer Info</string>
    <string name="edit">Edit</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="change_city">Change City</string>
    <string name="profile">Profile</string>
    <string name="change_phone">change phone</string>
    <string name="new_phone_number">New number</string>
    <string name="enter_your_new_phone">enter your new phone</string>
    <string name="the_new_email_is_the_same_as_the_email">The new Email is the same as the Email</string>
    <string name="the_new_name_is_the_same_as_the_current_name">The new name is the same as the current name.</string>
    <string name="phone_was_changed_successfully">Phone Was Changed Successfully</string>
    <string name="enter_your_old_password">enter your old password</string>
    <string name="enter_your_new_password">enter your new password</string>
    <string name="the_new_password_is_the_same_the_old_password">Thee New Password Is The Same Old Password</string>
    <string name="select_a_language">Select a language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="name_ahmed">Ahmed Shaker Abousteit</string>
    <string name="name_mohamed">Mohamed Elsayed Abdelhamid</string>
    <string name="name_mostafa">Mostafa Rabeh Hady</string>
    <string name="name_mohamed_salah">Mohamed Salah Ibrahim</string>
    <string name="name_youssef">Youssef Abdelnasser Youssef</string>
    <string name="year">2025</string>
    <string name="developed_by">Developed By</string>
    <string name="new_problem">New Problem</string>
    <string name="the_power_has_been_disconnected">The power has been disconnected</string>
    <string name="the_power_has_been_connected">The Power has been connected</string>
</resources>