<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:isScrollContainer="true"
    android:background="@color/white"
    tools:context="ui.registration.RegistrationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageView
            android:id="@+id/icon_iv"
            android:layout_width="@dimen/_115sdp"
            android:layout_height="@dimen/_95sdp"
            android:src="@drawable/electricity_icon"
            app:layout_constraintBottom_toTopOf="@+id/register_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/register_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/jomhuria"
            android:text="@string/register"
            android:textColor="@color/auth_btn"
            android:textSize="@dimen/_40ssp"
            app:layout_constraintBottom_toTopOf="@+id/phone_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.403" />

        <TextView
            android:id="@+id/register_description_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_personal_information"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="@id/phone_tv"
            app:layout_constraintTop_toBottomOf="@id/register_tv" />

        <TextView
            android:id="@+id/fullName_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/fullName"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/phone_et"
            app:layout_constraintTop_toBottomOf="@id/register_description_tv" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fullName_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@drawable/background_input"
            android:hint="@string/enter_your_full_name"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:maxLines="1"
            android:textCursorDrawable="@drawable/text_cursor"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fullName_tv" />

        <TextView
            android:id="@+id/email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/phone_et"
            app:layout_constraintTop_toBottomOf="@id/fullName_et" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@drawable/background_input"
            android:hint="@string/enter_your_email"
            android:maxLines="1"
            android:textCursorDrawable="@drawable/text_cursor"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_tv" />


        <TextView
            android:id="@+id/phone_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/phone"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/phone_et"
            app:layout_constraintTop_toBottomOf="@id/email_et" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@drawable/background_input"
            android:hint="@string/enter_your_phone"
            android:paddingStart="@dimen/_15sdp"
            android:maxLines="1"
            android:textCursorDrawable="@drawable/text_cursor"
            android:inputType="phone"
            android:paddingEnd="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_tv" />

        <TextView
            android:id="@+id/password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/password_et"
            app:layout_constraintTop_toBottomOf="@id/phone_et" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="23dp"
            android:layout_marginEnd="23dp"
            android:background="@drawable/background_input"
            android:hint="@string/enter_your_password"
            android:maxLines="1"
            android:inputType="textPassword"
            android:textCursorDrawable="@drawable/text_cursor"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_tv" />


        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/auth_btn"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_et" />


        <ProgressBar
            android:id="@+id/loadingProgress"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:indeterminateTint="@color/auth_btn"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_et" />



    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>