<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.reportproblemfragment.ReportProblemFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_color"
        android:backgroundTint="@color/white"
        android:elevation="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/report_a_problem"
        app:titleCentered="true"
        app:titleTextAppearance="@style/ToolbarTitleBold"
        app:titleTextColor="@color/primary_color" />

    <TextView
        android:id="@+id/problem_title_headline_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_11sdp"
        android:text="@string/problem_title"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/problem_title_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_10sdp"
        android:paddingStart="@dimen/_3sdp"
        android:paddingEnd="@dimen/_3sdp"
        android:importantForAutofill="no"
        android:background="@drawable/text_view_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/problem_title_headline_tv"/>
    <TextView
        android:id="@+id/problem_description_headline_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_11sdp"
        android:text="@string/problem_description"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/problem_title_et" />
    <EditText
        android:id="@+id/problem_description_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:layout_margin="@dimen/_10sdp"
        android:paddingStart="@dimen/_3sdp"
        android:paddingEnd="@dimen/_3sdp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:background="@drawable/text_view_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/problem_description_headline_tv"/>
    <TextView
        android:id="@+id/problem_address_headline_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_11sdp"
        android:text="@string/problem_address"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/problem_description_et"/>

    <EditText
        android:id="@+id/problem_address_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_10sdp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="@dimen/_3sdp"
        android:paddingEnd="@dimen/_3sdp"
        android:background="@drawable/text_view_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/problem_address_headline_tv"/>
    <TextView
        android:id="@+id/select_engineer_headline_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_11sdp"
        android:text="@string/select_engineer"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/problem_address_et"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/engineers_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_10sdp"
        tools:listitem="@layout/select_engineer_card"
        app:layout_constraintBottom_toTopOf="@+id/reportProblem_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_engineer_headline_tv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reportProblem_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_margin="@dimen/_10sdp"
        android:backgroundTint="@color/primary_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/submit_btn"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintStart_toStartOf="parent" />


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        android:indeterminateTint="@color/colorPrimary"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintTop_toBottomOf="@id/engineers_rv"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>